--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@types/jszip": "^3.4.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "next": "16.0.7",
