--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@prisma/client": "^7.2.0",
     "@types/jszip": "^3.4.0",
+    "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.1",
     "file-saver": "^2.0.5",
+    "jsonwebtoken": "^9.0.3",
     "jszip": "^3.10.1",
     "next": "16.0.7",
+    "prisma": "^7.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0"
