--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.3",
     "jszip": "^3.10.1",
     "next": "16.0.7",
+    "papaparse": "^5.5.3",
     "prisma": "^7.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -30,7 +31,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.19.27",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
