updated docekr file to 9005 port and added databse -> book marks

--- a/env.production.example
+++ b/env.production.example
@@ -2,10 +2,10 @@
 # Copy this file to .env.production and fill in your actual values
 
 # Database Configuration
-DATABASE_URL="postgresql://postgres:your_password@postgres:5432/utilities_db"
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your_secure_password_here
-POSTGRES_DB=utilities_db
+DATABASE_URL="postgresql://utility_user:utility_2026@postgres:5432/utility_db"
+POSTGRES_USER=utility_user
+POSTGRES_PASSWORD=utility_2026
+POSTGRES_DB=utility_db
 
 # Application Configuration
 NODE_ENV=production
