--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jszip": "^3.10.1",
     "next": "16.0.7",
     "papaparse": "^5.5.3",
+    "pg": "^8.16.3",
     "prisma": "^7.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -30,7 +31,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
     "@types/file-saver": "^2.0.7",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20.19.27",
     "@types/papaparse": "^5.5.2",
     "@types/react": "^19",
