--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@types/jszip": "^3.4.0",
+    "@types/pg": "^8.16.0",
     "bcryptjs": "^3.0.3",
     "cookie": "^1.1.1",
     "file-saver": "^2.0.5",
