--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.3",
     "jszip": "^3.10.1",
+    "minio": "^8.0.6",
     "next": "16.0.7",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
