--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.3",
     "jszip": "^3.10.1",
+    "jszip": "^3.10.1",
     "minio": "^8.0.6",
     "next": "16.0.7",
     "papaparse": "^5.5.3",
@@ -43,6 +44,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "@types/jszip": "^3.4.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "sharp": "^0.34.5",
