--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 9005",
     "build": "next build",
     "export": "next build && next export -o docs",
-    "start": "next start",
+    "start": "next start -p 9005",
     "lint": "eslint"
   },
   "dependencies": {
