--- a/package.json
+++ b/package.json
@@ -10,28 +10,42 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@tanstack/react-query": "^5.90.16",
     "@types/jszip": "^3.4.0",
+    "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.16.0",
     "bcryptjs": "^3.0.3",
+    "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.25.0",
     "jsonwebtoken": "^9.0.3",
     "jszip": "^3.10.1",
-    "jszip": "^3.10.1",
+    "lenis": "^1.3.17",
+    "lucide-react": "^0.562.0",
     "minio": "^8.0.6",
     "next": "16.0.7",
+    "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.12",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
     "react": "19.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -39,12 +53,12 @@
     "@types/cookie": "^0.6.0",
     "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^20.19.27",
     "@types/papaparse": "^5.5.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
-    "@types/jszip": "^3.4.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "sharp": "^0.34.5",
